# test-looper

./: .gitignore  .gitmodules  .pre-commit-config.yaml  Dockerfile  README.md  cells.py  collect_pytest_tests.py  consumer.py  docker-compose.yml  main.py  pyproject.toml  pytest.ini  requirements.txt  run_local.py  setup.py  test.sh  test_looper.json  tox.ini
.docker/: Dockerfile  README.md  aws-nginx.conf  docker_build.sh  docker_pull.sh  docker_push.sh  docker_run.sh  generate_requirements.py  install_odb.py  lock_requirements.sh  requirements.txt  run_tl.sh
.docker/build-context/: Dockerfile  config.yaml  docker_entrypoint.sh
.github/workflows/: main.yml
.testlooper/: config.yaml  generate_test_plan.py  post-commit  post-receive  run_pytest_tests.py  test_plan.yaml
.testlooper/environments/: Dockerfile.setup
docs/: reactors.md
docs/specs/: LocalEngine.md  Repo_Configuration_Spec.md  schema.gv  uiSpec.md
scripts/: example_config.yaml  run_local.py  start_services.py
specs/: Repo_Configuration_Spec.md  testDefinitionsSpec.md
test_looper/: __init__.py  cells.py  command.py  engine_schema.py  git.py  odb.py  parser.py  pytest.py  pytest_runner.py  repo_schema.py  reporter.py  runner.py  schema.py  service.py  service_schema.py  test_schema.py  tl_git.py
test_looper/utils/: db.py  plot.py  services.py
testlooper/: __init__.py  artifact_store.py  dispatcher.py  engine_schema.py  local_engine_service.py  messages.py  query_args.py  repo_schema.py  schema.py  schema_declarations.py  schemas.py  service.py  test_schema.py  ui_schema.py  utils.py  worker.py
testlooper/cli/: README.md  tlcli-complete.bash  tlcli-complete.fish  tlcli-complete.zsh  tlcli.py  util.py
testlooper/cli/git/: git.py
testlooper/core/: git.py
testlooper/engine/: dispatcher.py  git_watcher_service.py  local_engine_agent.py  local_engine_service.py  schema_monitor.py  worker.py
testlooper/schema/: engine_schema.py  repo_schema.py  schema_declarations.py  schema_old.py  test_schema.py  ui_schema.py
testlooper/ui/: homepage.py
testlooper/vcs/: git.py  managed_thread.py  out_of_process_downloader.py  socket_util.py  stack_info.py  subprocess_runner.py  thread_local_stack.py
tests/: conftest.py  marker_collector_plugin.py  test_always_fail.py  test_artifact_store.py  test_git.py  test_git_watcher_service.py  test_git_wrapper.py  test_module.py  test_parser.py  test_repo_schema.py  test_runner.py  test_service.py  test_test_schema.py  utils.py
tests/_template_repo/: test_looper.json
tests/_template_repo/tests/: test.py  test_cases.py
tests/engine/: test_git_watcher_service.py  test_local_engine.py
