[build-system]
requires = ["setuptools>=61.0",
            "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "testlooper"
version = "0.1.0"
description = "Testlooper is a tool for running test suites across commits and serving a UI for the results."
readme = "README.md"
authors = [
    {name = "William Grant", email = "william.grant@aprioriinvestments.com"},
    {name = "Alexandros Tzannes", email = "alexandros.tzannes@aprioriinvestments.com"},
    {name = "Braxton McKee",  email = "braxton@aprioriinvestments.com"},
]
license = {text = "Apache-2.0"}
keywords = ["testing"]
requires-python = ">=3.8"
dependencies = [
    "object_database @ git+https://github.com/APrioriInvestments/object_database.git@b047bdc2a8dabc5d954599a441b3da23a83b50d9#egg=object_database=999.999.999",
]

[project.optional-dependencies]
dev = ["pre-commit"]

[tool.pytest.ini_options]
testpaths = ["tests"]
