[build-system]
requires = ["setuptools>=61.0",
            "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "testlooper"
version = "1.0.0"
description = "Testlooper is a tool for running test suites across commits and serving a UI for the results."
readme = "README.md"
authors = [
    {name = "William Grant", email = "william.grant@aprioriinvestments.com"},
    {name = "Alexandros Tzannes", email = "alexandros.tzannes@aprioriinvestments.com"},
    {name = "Braxton McKee",  email = "braxton@aprioriinvestments.com"},
]
license = {text = "Apache-2.0"}
keywords = ["testing"]
requires-python = ">=3.8"
dependencies = [
    "object_database @ git+https://github.com/APrioriInvestments/object_database.git@b047bdc2a8dabc5d954599a441b3da23a83b50d9#egg=object_database=999.999.999",
    "PyYAML ~= 6.0",
    "click ~= 8.1",
    "docker ~= 6.1"
]

[project.optional-dependencies]
dev = ["pre-commit",
       "pytest",
       "pytest-json-report",
       "black",
       "flake8",
]

[project.scripts]
tlcli = "testlooper.cli.tlcli:tlcli"

[tool.pytest.ini_options]
testpaths = ["tests"]
markers = [
    "docker: marks test that must run in a Docker image (currently only used to check TL filtering)",
    "fast: marks tests as quick to run (currently only used to check TL filtering)",
    "slow: marks tests that take too long to repeatedly run.",
]
